# GtestProject

./: CMakeLists.txt  README.md
src/: my_code.cpp
test/: test_my_code.cpp
